INTYGFV-14370: Changing snakeyaml loader option maxAliasesForCollecti… (#179)